test/testdata/number/invalid_binary_op_error.lox
1 + true; // error: '+' operator cannot be used with types 'number' and 'bool'
